--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 arduino-simple-rpc = "^2.4.2"
+click = "^8.1.3"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
