--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,18 @@
 name: Deploy Plantotron
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+    - main
 jobs:
-    Deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - run: echo "Unicorns!"
+  Deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: deploy via ssh
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: ${{ secrets.PORT }}
+        script: |
+          /home/momo/plantotron/deploy
