--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.9"
 arduino-simple-rpc = "^2.4.2"
 click = "^8.1.3"
+google-api-python-client = "^2.88.0"
 
 
 [tool.poetry.group.dev.dependencies]
