change to docker

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     - main
 jobs:
   Deploy:
-    runs-on: ubuntu-latest
+    runs-on: docker
     steps:
     - name: deploy via ssh
       uses: appleboy/ssh-action@v0.1.10
@@ -17,14 +17,8 @@ jobs:
         envs: GITHUB_SHA
         script: |
           cd /home/momo/plantotron
-          date
           git fetch
-          date
           git checkout $GITHUB_SHA
-          date
           /home/momo/.local/bin/poetry install -n --ansi --without=dev --sync
-          date
           POETRY_PYTHON="$(/home/momo/.local/bin/poetry run -n --ansi which python)"
-          date
           /usr/bin/sudo "${POETRY_PYTHON}" -m plantotron install
-          date
