--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     - main
 jobs:
   Deploy:
-    runs-on: docker
+    runs-on: ubuntu-latest
     steps:
     - name: deploy via ssh
       uses: appleboy/ssh-action@v0.1.10
